--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "rimraf dist && tsc -p tsconfig.json",
     "precommit": "lint-staged",
     "prepublish:npm": "npm run build",
-    "publish:npm": "npm publish --access public"
+    "publish:npm": "npm publish --access public",
+	"postinstall": "yarn build"
   },
   "keywords": [
     "nestjs",
