--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "build": "rimraf dist && tsc -p tsconfig.json",
     "precommit": "lint-staged",
     "prepublish:npm": "npm run build",
-    "publish:npm": "npm publish --access public",
-	"postinstall": "yarn build"
+    "publish:npm": "npm publish --access public"
   },
   "keywords": [
     "nestjs",
@@ -23,7 +22,7 @@
     "@types/node": "^17.0.8",
     "@types/protobufjs": "^6.0.0",
     "dgraph-js": "^21.3.1",
-	"grpc": "^1.24.11",
+    "grpc": "^1.24.11",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.7",
     "prettier": "^2.5.1",
@@ -38,7 +37,7 @@
     "@nestjs/common": "^7.6.15",
     "@nestjs/core": "^7.6.15",
     "dgraph-js": "^21.3.1",
-	"grpc": "^1.24.11",
+    "grpc": "^1.24.11",
     "reflect-metadata": "0.1.13",
     "rxjs": "^7.5.2"
   },
